[tool.poetry]
name = "troxa-hexlet-code"
version = "0.1.1"
description = "A set of mini-games with commands brain-even, brain-calc, brain-gcd, brain-progression, brain-prime"
authors = ["Vyacheslav Terskikh <troxa843@gmail.com>"]
repository = "https://github.com/itroxa/python-project-49"
readme = "README.md"
packages = [
	{include = "brain_games"},
]
classifiers = [
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
